# modern_python

./: .coverage  .darglint  .flake8  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
src/hypermodern_python/: console.py  get_data.py
src/modern_python/: console.py  get_data.py
tests/: .coverage  conftest.py  test_console.py  test_get_data.py
