[project]
name = "modern-python"
version = "0.1.0"
description = "The modern Python project"
license = "MIT"
readme = "README.md"
# homepage = "https://github.com/dbarbanakov/modern-python"
# repository = "https://github.com/dbarbanakov/modern-python"
keywords = ["modern"]
authors = [{ name = "dbarbanakov", email = "dbarbanakov@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["click (>=8.3.2,<9.0.0)", "requests (>=2.33.1,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
source = ["modern-python"]
branch = true
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*", "**/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 100    # Fail build if coverage < 80%

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)", "pytest-cov (>=7.1.0,<8.0.0)"]
