[project]
name = "modern-python"
version = "0.1.0"
description = "The modern Python project"
license = "MIT"
readme = "README.md"
# homepage = "https://github.com/dbarbanakov/modern-python"
# repository = "https://github.com/dbarbanakov/modern-python"
keywords = ["modern"]
authors = [{ name = "dbarbanakov", email = "dbarbanakov@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["click (>=8.3.2,<9.0.0)", "requests (>=2.33.1,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
modern-python = "modern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = 88

[tool.pytype]
disable = ["pyi-error", "import-error"]
python_version = "3.12"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage[toml] (>=7.13.5,<8.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "nox (>=2026.2.9,<2027.0.0)",
    "nox-poetry (>=1.2.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-bandit (>=4.1.1,<5.0.0)",
    "flake8-black (>=0.4.0,<0.5.0)",
    "flake8-bugbear (>=25.11.29,<26.0.0)",
    "flake8-import-order (>=0.19.2,<0.20.0)",
    "safety (>=3.7.0,<4.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pytype (>=2024.10.11,<2025.0.0)",
]
